<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="2sp"
        android:text="@string/title"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_estatura"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="5dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_estatura_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/height"
                android:textAlignment="center"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_estaura"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6sp"
                android:text="@string/height_value_defect"
                android:textSize="24sp"
                android:textStyle="bold" />

            <com.google.android.material.slider.RangeSlider
                android:id="@+id/rs_estatura"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:contentDescription="@string/height_description"
                android:stepSize="1"
                android:valueFrom="100"
                android:valueTo="220" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_peso"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cv_estatura">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="5sp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_peso_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weight"
                android:textAlignment="center"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/et_peso"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6sp"
                android:ems="10"
                android:hint="@string/weight_edittext_help"
                android:inputType="numberDecimal"
                android:minHeight="48dp" />

        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_status"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cv_peso">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="5dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_imc_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/status_example"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_imc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/imc_example"
                android:textSize="24sp"
                android:textStyle="bold" />


        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btn_imc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_imc_calculator"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cv_status" />

</androidx.constraintlayout.widget.ConstraintLayout>